force-app/main/default/objects/compliancequest__SQX_Part__c/compliancequest__SQX_Part__c.object-meta.xml
<CustomObject>
    <description>Object to list all Parts</description>
    <label>Part</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>