force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Active__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field,when checked, indicates that the corresponsing Part is Active.
An active part can be added as a Supplier Part either as Active or Not Active. 
A non-active part can be added as a Supplier Part only as Not Active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>