force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__GTIN_Number__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__GTIN_Number__c</fullName>
    <description>Captures GTIN Number based on lot number and product number selected and it must be calculated based on the formula indicated in the mapping document.</description>
    <label>GTIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>