force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Part_Description__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Part_Description__c</fullName>
    <description>Description of the Part.</description>
    <label>Part Description</label>
    <type>TextArea</type>
</CustomField>