force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Part_Family__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Part_Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Describes the Family/Category to which a Part belongs to.</description>
    <label>Part Family</label>
    <referenceTo>compliancequest__SQX_Part_Family__c</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>SQX_Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>