force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Part_Number__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Part_Number__c</fullName>
    <description>Unique text to identify a Part.</description>
    <externalId>true</externalId>
    <label>Part Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>