force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Part_Number_and_Name__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Part_Number_and_Name__c</fullName>
    <description>This field is used to combine part number and part name in one field.</description>
    <formula>compliancequest__Part_Number__c + &apos; : &apos; +  Name</formula>
    <label>Part Number and Name</label>
    <type>Text</type>
</CustomField>