force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Part_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Part_Risk_Level__c</fullName>
    <description>1-5 : 1 being HIGHEST Risk and 5 being LOWEST Risk</description>
    <inlineHelpText>1-5 : 1 being HIGHEST Risk and 5 being LOWEST Risk</inlineHelpText>
    <label>Part Risk Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>