force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Part_Type__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Part_Type__c</fullName>
    <description>This field describes the category/type of a part such as manufacturing/assembly</description>
    <label>Part Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Finished Product</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Sub Assembly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>