force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__Reason_For_Change__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Reason_For_Change__c</fullName>
    <description>This field is used to keep track of the reason for changing value of any field of the object.</description>
    <label>Reason For Change</label>
    <type>TextArea</type>
</CustomField>