force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest__SQX_SF_Product__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_SF_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Salesforce Product</description>
    <label>SF Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>SQX_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>