force-app/main/default/objects/compliancequest__SQX_Part__c/fields/compliancequest_SQX_Product__c.field-meta.xml
<CustomField>
    <fullName>compliancequest_SQX_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts (Product)</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <type>Lookup</type>
</CustomField>