force-app/main/default/objects/compliancequest__SQX_Part__c/validationRules/compliancequest__Part_Name_should_be_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Part_Name_should_be_Unique</fullName>
    <active>true</active>
    <errorConditionFormula>VLOOKUP( $ObjectType.compliancequest__SQX_Part__c.Fields.Name , $ObjectType.compliancequest__SQX_Part__c.Fields.Name, Name)= Name 
&amp;&amp;
( ISNEW() || PRIORVALUE(Name) &lt;&gt; Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Part with this name already exists.</errorMessage>
</ValidationRule>