force-app/main/default/objects/compliancequest__SQX_Part__c/validationRules/CQ_Admin_Part_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_Admin_Part_Activation</fullName>
    <active>false</active>
    <description>Allow only CQ Admin to mark the Part as Active</description>
    <errorConditionFormula>(ISNEW() &amp;&amp; compliancequest__Active__c  &amp;&amp;  NOT($Permission.CQ_Admin_Allow_Update) &amp;&amp; 
 ISBLANK(compliancequest__Reason_For_Change__c )) || (ISCHANGED( compliancequest__Active__c ) &amp;&amp; compliancequest__Active__c  &amp;&amp;  NOT($Permission.CQ_Admin_Allow_Update) &amp;&amp; 
 ISBLANK(compliancequest__Reason_For_Change__c ) &amp;&amp;
 NOT(ISNEW() ))</errorConditionFormula>
    <errorMessage>Only CQ Admin can mark the Part as Active and Reason should be specify to save the record</errorMessage>
</ValidationRule>