force-app/main/default/objects/compliancequest__SQX_Part__c/validationRules/PartActivationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PartActivationValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED( compliancequest__Active__c ),
$Profile.Name&lt;&gt;&quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>compliancequest__Active__c</errorDisplayField>
    <errorMessage>Only CQ Admins can activate the part.</errorMessage>
</ValidationRule>