force-app/main/default/objects/compliancequest__SQX_Part__c/listViews/compliancequest__All.listView-meta.xml
<ListView>
    <fullName>compliancequest__All</fullName>
    <columns>NAME</columns>
    <columns>compliancequest__Part_Number__c</columns>
    <columns>compliancequest__Part_Family__c</columns>
    <columns>compliancequest__Part_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>compliancequest__Part_Risk_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>