force-app/main/default/objects/compliancequest__SQX_Part__c/listViews/CQ_Part_Approver_SQX_Part.listView-meta.xml
<ListView>
    <fullName>CQ_Part_Approver_SQX_Part</fullName>
    <filterScope>Queue</filterScope>
    <label>CQ Part Approver</label>
    <queue>CQ_Part_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>